# clustering_practice

./: .gitignore  main.py  pyproject.toml  requirements.txt
data/: known_stars.csv
notebooks/: clustering.ipynb
