[project]
name = "clustering-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbcv",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy<=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy-stubs~=1.17.1",
    "seaborn>=0.13.2",
]

[tool.uv.sources]
dbcv = { git = "https://github.com/christopherjenness/DBCV.git" }
